[tool.poetry]
name = "graia-application-mirai"
version = "0.8.3"
description = ""
authors = ["GreyElaina <GreyElaina@outlook.com>"]
license = "AGPL-3.0"
packages = [
    { include = "graia", from = "src" }
]

[[tool.poetry.source]]
name = "tuna-tsinghua"
default = true
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.6.1"
graia-broadcast = "*"
aiohttp = "^3.6.2"
yarl = "^1.4.2"
contextvars = {version = "^2.4", python = "<3.7"}
regex = "^2020.7.14"
croniter = "^0.3.34"

[tool.poetry.dev-dependencies]
devtools = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
