[tool.poetry]
name = "graia-application-mirai"
version = "0.21.0"
description = ""
authors = ["GreyElaina <GreyElaina@outlook.com>"]
license = "AGPL-3.0"
packages = [
    { include = "graia", from = "src" }
]

[[tool.poetry.source]]
name = "tuna-tsinghua"
default = false
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
graia-broadcast = "^0.13.1"
aiohttp = "^3.6.2"
yarl = "^1.4.2"
regex = "^2020.7.14"

[tool.poetry.dev-dependencies]
devtools = "^0.5.1"
objgraph = "^3.4.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
